Hero flights slider paddings and spacings fix

--- a/src/pages/home/hero-section/heroFlightsSliderStyles.css
+++ b/src/pages/home/hero-section/heroFlightsSliderStyles.css
@@ -1,6 +1,7 @@
 .swiper {
   width: 100%;
   height: 295px;
+  overflow: initial;
 }
 
 .swiper-slide {
